--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/preset-react": "^7.10.4",
     "@hot-loader/react-dom": "^16.13.0",
     "babel-loader": "8.1.0",
+    "copy-webpack-plugin": "^6.1.0",
     "express": "4.17.1",
     "npm-run-all": "4.1.5",
     "react": "16.13.1",
