--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "webpack": "4.44.1",
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0",
+        "webpack-manifest-plugin": "^2.2.0",
         "webpack-node-externals": "2.5.2"
     }
 }
