--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "scripts": {
         "start:server": "node ./tools/waitForBuildingClient && webpack --config  webpack.config.server.js",
         "start:client": "webpack-dev-server --config webpack.config.client.js",
-        "start": "rimraf ./dist && npm-run-all --parallel start:server start:client"
+        "start": "rimraf ./dist && npm-run-all --parallel start:server start:client",
+        "upgrade-deps": "yarn upgrade-interactive --latest && yarn upgrade"
     },
     "license": "MIT",
     "dependencies": {
