--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "@babel/preset-env": "^7.11.0",
         "@babel/preset-react": "^7.10.4",
         "@hot-loader/react-dom": "^16.13.0",
+        "@types/webpack": "^4.41.22",
+        "@types/webpack-env": "^1.15.3",
         "babel-loader": "8.1.0",
         "copy-webpack-plugin": "^6.1.0",
         "express": "4.17.1",
